--- a/package.json
+++ b/package.json
@@ -29,14 +29,19 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.8",
+    "@nestjs/typeorm": "^10.0.2",
     "aws-lambda": "^1.0.7",
     "helmet": "^7.1.0",
     "passport": "^0.7.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "typeorm": "^0.3.20",
+    "typeorm-naming-strategies": "^4.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
