--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/typeorm": "^10.0.2",
     "aws-lambda": "^1.0.7",
+    "dotenv": "^16.4.5",
     "helmet": "^7.1.0",
     "passport": "^0.7.0",
     "passport-http": "^0.3.0",
