--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "beanstalkInit": "eb init -r us-east-1",
+    "beanstalkCreate": "eb create development --single --cname alenabonch-cart-api-dev"
   },
   "dependencies": {
     "@codegenie/serverless-express": "^4.14.0",
